<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/requestConnection" android:title="@string/requestConnection"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/sendBtData" android:title="@string/sendBtData"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/bt_pair" android:title="@string/bt_pair"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/dc_toggle" android:title="@string/dc_toggle"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/configure" android:title="@string/configure"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
